--- a/Mvc4Bootstrap/Web.config
+++ b/Mvc4Bootstrap/Web.config
@@ -21,6 +21,9 @@
     <add key="enableSimpleMembership" value="true" />
   </appSettings>
   <system.web>
+    <system.web>
+      <customErrors mode="Off"/>
+    </system.web>
     <authentication mode="Forms">
       <forms loginUrl="/Account/Logon"></forms>
     </authentication>
