--- a/Mvc4Bootstrap/A1fxCrm.Web.csproj
+++ b/Mvc4Bootstrap/A1fxCrm.Web.csproj
@@ -2203,6 +2203,8 @@
     <Content Include="Views\Status\Edit.cshtml" />
     <Content Include="Views\Status\Index.cshtml" />
     <Content Include="Views\Status\StatusList.cshtml" />
+    <Content Include="Views\Shared\_CustomerDetails.cshtml" />
+    <Content Include="Views\Shared\Partial1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
